fix layout broken. add keylistener what shift+enter send message. keep commentbar status fix some bugs

--- a/src/renderer/css/main.less
+++ b/src/renderer/css/main.less
@@ -8,11 +8,6 @@
     padding-left: 10px;
 }
 
-.mdl-textfield.footerTextInput {
-    padding: 0px;
-}
-
-
 /*
 .mdl-mini-footer {
     padding: 0px;
@@ -87,7 +82,7 @@
     width: 300px;
     height: 80px;
     margin-left: 10px;
-    z-index: 800;
+    z-index: 4;
     padding: 10px;
     background-color: floralwhite;
     .toolbar {
